[package]
name = "pe-fe"
version = "0.5.2"
edition = "2021"
authors = ["Mudd"]

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"] }
druid = "0.8.3"
phf = { version = "0.11.1", features = ["macros"] }
sha2 = "0.10.6"

